[metadata]
name = multi-agent-slam
version = 0.0.1
author = James Di
author_email = jamesyubai.di@gmail.com
description = Python package for Multi-agent SLAM project. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamesdi1993/multi-agents-slam-python
project_urls =
    Bug Tracker = https://github.com/jamesdi1993/multi-agent-slam-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
